<resources>
    <!--Toolbar-->
    <string name="app_name">MyNews</string>
    <string name="search">search</string>
    <string name="more">more</string>

    <!-- NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Search view -->
    <string name="arrow_back_go_to_activity_main">Arrow back go to activity_main</string>
    <string name="search_query_term">Search query term</string>
    <string name="spinner_title_end_date">End Date</string>
    <string name="spinner_title_start_date">Begin date</string>
    <string name="checkbox_arts">Arts</string>
    <string name="checkbox_politics">Politics</string>
    <string name="checkbox_business">Business</string>
    <string name="checkbox_sports">Sports</string>
    <string name="checkbox_entrepreneurs">Entrepreneurs</string>
    <string name="checkbox_travels">Travels</string>
    <string name="activity_search_search_btn">SEARCH</string>
    <string name="empty_date_format">-- / -- / ----</string>

    <!--More option menu-->
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="notifications">Notification</string>
    <string name="title_activity_display_search">DisplaySearchActivity</string>
    <string name="enable_notification">Enable notification (once per day)</string>
</resources>
