<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_arts"
            android:title="@string/checkbox_arts" />
        <item
            android:id="@+id/activity_main_drawer_politics"
            android:title="@string/checkbox_politics" />
        <item
            android:id="@+id/activity_main_drawer_business"
            android:title="@string/checkbox_business" />
        <item
            android:id="@+id/activity_main_drawer_sports"
            android:title="@string/checkbox_sports" />
        <item
            android:id="@+id/activity_main_drawer_entrepreneurs"
            android:title="@string/checkbox_entrepreneurs" />
        <item
            android:id="@+id/activity_main_drawer_travels"
            android:title="@string/checkbox_travels" />
    </group>
</menu>